--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,14 @@ plugins {
     id 'org.unbroken-dome.xjc' version '1.1.3'
 }
 
+apply plugin: 'java-library'
+
 task initSchema() {
+    delete 'schema'
     ant.get(src: 'https://github.com/ETDA/etax-schema/releases/download/v2.0.1/schema-v2.0.1.zip', dest: 'schema.zip', skipexisting: 'true')
     ant.unzip(src: 'schema.zip', dest: '.')
     delete 'schema.zip'
-}
-
-task compile(type: JavaCompile) {
-    source = fileTree(dir: 'src', include: '**/*.java')
-    destinationDir = file('build/classes/main')
-    classpath = files('build/classes/main')
+    delete 'src/main/java/generated'
 }
 
 xjcGenerate {
