--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,13 @@ plugins {
     id 'org.unbroken-dome.xjc' version '1.1.3'
 }
 
-apply plugin: 'java-library'
+apply plugin: 'java'
+version = '1.0-SNAPSHOT'
+defaultTasks 'clean', 'test'
+
+repositories {
+    jcenter()
+}
 
 task initSchema() {
     delete 'schema'
@@ -17,4 +23,9 @@ xjcGenerate {
         include '*.xsd'
     }
     outputDirectory = file('src/main/java/generated')
+}
+
+dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    testCompile "junit:junit:4.11"
 }
