--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,35 @@
+buildscript {
+    repositories {
+        maven {
+            url 'http://artifact.billme.in.th/artifactory'
+            credentials {
+                username = "admin"
+                password = ""
+            }
+            name = "maven-main-cache"
+        }
+    }
+    dependencies {
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4"
+    }
+}
+
 plugins {
     id 'org.unbroken-dome.xjc' version '1.1.3'
+    id "java"
+    id "maven-publish"
+    id "com.jfrog.artifactory" version "4.5.4"
 }
 
 apply plugin: 'java'
+apply plugin: 'maven-publish'
+apply plugin: "com.jfrog.artifactory"
 version = '1.0-SNAPSHOT'
 defaultTasks 'clean', 'test'
 
 repositories {
     jcenter()
+    add buildscript.repositories.getByName("maven-main-cache")
 }
 
 delete 'schema'
@@ -21,6 +43,31 @@ xjcGenerate {
         include '*.xsd'
     }
     outputDirectory = file('src/main/java/generated')
+}
+
+artifactory {
+    contextUrl = "http://artifact.billme.in.th/artifactory"
+    publish {
+        repository {
+            repoKey = 'billme-public'
+            username = 'admin'
+            password = ''
+            ivy {
+                mavenCompatible = true
+            }
+        }
+        defaults {
+            publications ('mavenJava')
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
 
 dependencies {
