--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         maven {
-            url 'http://artifact.billme.in.th/artifactory'
+            url 'https://artifact.billme.in.th/artifactory'
             credentials {
                 username = "admin"
                 password = ""
@@ -24,7 +24,8 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
-version = '1.0-SNAPSHOT'
+version = '0.0.1'
+group = 'th.pt'
 defaultTasks 'clean', 'test'
 
 repositories {
@@ -46,7 +47,7 @@ xjcGenerate {
 }
 
 artifactory {
-    contextUrl = "http://artifact.billme.in.th/artifactory"
+    contextUrl = "https://artifact.billme.in.th/artifactory"
     publish {
         repository {
             repoKey = 'billme-public'
@@ -65,6 +66,9 @@ artifactory {
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            groupId 'th.pt'
+            artifactId 'black-tea'
+            version '0.0.1'
             from components.java
         }
     }
